--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+
+  <main>
+    <section>
+      <img src='images/phones.png' />
+    </section>
+    <section>
+      <article class="logoBadge">
+        <img src="images/brand.png" />
+        <button>
+          <img src="images/home.png" />
+          <span>
+            Log In
+          </span>
+        </button>
+      </article>
+      <article class="content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life
+          with
+          friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to
+          Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+          Oh yeah, did we mention it's free?</p>
+      </article>
+      <article>
+        <img src="images/badge-iphone.png" />
+        <img src="images/badge-android.png" />
+      </article>
+    </section>
+  </main>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Api</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#" id="last">2014 Instagram</a></li>
+    </ul>
+  </footer>
+</body>
+
 </html>
